// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Footer Component > renders with default props and matches snapshot 1`] = `
<footer
  class="w-full bg-background-secondary border-t border-foreground/10"
>
  <div
    class="container mx-auto px-4 py-8 md:py-12"
  >
    <div
      class="grid grid-cols-1 md:grid-cols-3 gap-8"
    >
      <div
        class="space-y-3"
      >
        <h3
          class="text-lg font-bold text-primary"
        >
          Auckland Combat Academy
        </h3>
        <p
          class="text-sm text-foreground/80 leading-relaxed"
        >
          World-class Sanda martial arts training club offering expert coaching, flexible schedules, and programs for all skill levels.
        </p>
        <p
          class="text-sm text-foreground/80 leading-relaxed"
        >
          The World-Class Art of Chinese Kickboxing.
        </p>
      </div>
      <div
        class="space-y-3"
      >
        <h3
          class="text-lg font-bold text-foreground"
        >
          Quick Links
        </h3>
        <ul
          class="space-y-2"
        />
      </div>
      <div
        class="space-y-3"
      >
        <h3
          class="text-lg font-bold text-foreground"
        >
          Contact Us
        </h3>
        <ul
          class="space-y-2 text-sm text-foreground/80"
        >
          <li>
            <p
              class="font-medium text-foreground"
            >
              Address:
            </p>
            <p>
               
            </p>
            <p />
            <p>
               
            </p>
            <p />
          </li>
          <li>
            <span
              class="font-medium text-foreground"
            >
              Phone:
            </span>
            <br />
          </li>
          <li>
            <span
              class="font-medium text-foreground"
            >
              Email:
            </span>
            <br />
            <a
              class="hover:text-primary transition-colors"
              href="mailto:undefined"
            />
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="border-t border-foreground/10 bg-background"
  >
    <div
      class="container mx-auto px-4 py-4"
    >
      <p
        class="text-center text-sm text-foreground/60"
      >
        © 
        2026
         China Sanda Club. All rights reserved.
      </p>
    </div>
  </div>
</footer>
`;

exports[`Footer Component > renders with navigation items and matches snapshot 1`] = `
<footer
  class="w-full bg-background-secondary border-t border-foreground/10"
>
  <div
    class="container mx-auto px-4 py-8 md:py-12"
  >
    <div
      class="grid grid-cols-1 md:grid-cols-3 gap-8"
    >
      <div
        class="space-y-3"
      >
        <h3
          class="text-lg font-bold text-primary"
        >
          Auckland Combat Academy
        </h3>
        <p
          class="text-sm text-foreground/80 leading-relaxed"
        >
          World-class Sanda martial arts training club offering expert coaching, flexible schedules, and programs for all skill levels.
        </p>
        <p
          class="text-sm text-foreground/80 leading-relaxed"
        >
          The World-Class Art of Chinese Kickboxing.
        </p>
      </div>
      <div
        class="space-y-3"
      >
        <h3
          class="text-lg font-bold text-foreground"
        >
          Quick Links
        </h3>
        <ul
          class="space-y-2"
        >
          <li>
            <a
              class="text-sm text-foreground/80 hover:text-primary transition-colors"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              class="text-sm text-foreground/80 hover:text-primary transition-colors"
              href="/classes"
            >
              Classes
            </a>
          </li>
          <li>
            <a
              class="text-sm text-foreground/80 hover:text-primary transition-colors"
              href="/coaches"
            >
              Coaches
            </a>
          </li>
          <li>
            <a
              class="text-sm text-foreground/80 hover:text-primary transition-colors"
              href="/pricing"
            >
              Pricing
            </a>
          </li>
          <li>
            <a
              class="text-sm text-foreground/80 hover:text-primary transition-colors"
              href="/gallery"
            >
              Gallery
            </a>
          </li>
          <li>
            <a
              class="text-sm text-foreground/80 hover:text-primary transition-colors"
              href="/contact"
            >
              Contact
            </a>
          </li>
        </ul>
      </div>
      <div
        class="space-y-3"
      >
        <h3
          class="text-lg font-bold text-foreground"
        >
          Contact Us
        </h3>
        <ul
          class="space-y-2 text-sm text-foreground/80"
        >
          <li>
            <p
              class="font-medium text-foreground"
            >
              Address:
            </p>
            <p>
              18
               
              Norwich Street
            </p>
            <p>
              Eden Terrace
            </p>
            <p>
              Auckland
               
              1021
            </p>
            <p>
              New Zealand
            </p>
          </li>
          <li>
            <span
              class="font-medium text-foreground"
            >
              Phone:
            </span>
            <br />
            0279662222
          </li>
          <li>
            <span
              class="font-medium text-foreground"
            >
              Email:
            </span>
            <br />
            <a
              class="hover:text-primary transition-colors"
              href="mailto:chinasandaclub@gmail.com"
            >
              chinasandaclub@gmail.com
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="border-t border-foreground/10 bg-background"
  >
    <div
      class="container mx-auto px-4 py-4"
    >
      <p
        class="text-center text-sm text-foreground/60"
      >
        © 
        2026
         China Sanda Club. All rights reserved.
      </p>
    </div>
  </div>
</footer>
`;
